# sabatAnalysis

./: CMakeLists.txt  README.md  dataFile.cpp  dataFile.h  elementSpectrum.cpp  elementSpectrum.h  examples.cpp  examples.h  fitAll.sh  fitAllLT50ns.sh  fitMustardGas.sh  fitMustardGasAndSandLT50ns.sh  fitMustardGasAndWater.sh  fitMustardGasAndWaterAndSandLT50ns.sh  fitMustardGasAndWaterLT50ns.sh  fitMustardGasLT50ns.sh  main.cpp  sabatAnalysis.kdev4  spectrumFitter.cpp  spectrumFitter.h
.kdev4/: sabatAnalysis.kdev4
data/baseSpectra/: 1E8_LaBr3_3x3_FWHM_Cl_out.txt sorted.txt~
data/baseSpectra/timeGateLs50ns/Prompt - submarine 10 cm/C/: 7.9_1E8_LaBr3_3x3_FWHM_C_out_t_lt_50ns__sorted_cell__13.txt  wynik.txt
data/baseSpectra/timeGateLs50ns/Prompt - submarine 10 cm/Cl/: joinedClorines.txt
data/simSpectra/: 6.9_1E8_LaBr3_3x3_FWHM_hori30_out__sorted_cell__2.txt~  8.0_LaBr3_3x3_2E7_hori50_t50ns_FWHM_out__sorted_cell__13.txt~  test~  v7.9_airrbox10cm_mg_t0-50nsConv.dat~
data/simSpectra/Mustard_gas_in_air/: 7.9_1E8_LaBr3_3x3_FWHM_MG_t_lt_50ns_out__sorted_cell__13.txt  7.9_1E8_LaBr3_3x3_FWHM_MG_t_lt_50ns_out__sorted_cell__13_CUT.txt
data/simSpectra/Mustard_gas_underwater/: 7.91_LaBr3_3x3_3E8_FWHM_hori30_t5sh_sand_low_out__sorted_cell__2_CUT.txt
data/simSpectra/Prompt photons less than 50 ns/det30cm/: 7.9_LaBr3_3x3_3E8hori30_t5sh_out_sand_low_sorted_cell__2.txt  8.02_LaBr3_3x3_3E8_hori30_FWHM_t5sh_bgnd_sand_low_out__sorted_cell__2.txt
data/simSpectra/Total - without time gate/det50cm_from_source/: 6.9_1E8_LaBr3_3x3_FWHM_hori50_out__sorted_cell__13.txt
(+41 files in other folders)
